# Eggbau

./: .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs  session.rs
src/auf/: labels.rs  mod.rs  notation.rs  render.rs
src/cert/: mod.rs
src/cli/: mod.rs
src/discover/: mod.rs
src/egg/: mod.rs
src/export/: mod.rs
src/mm0/: env.rs  mod.rs  parse.rs
tests/: auf_formatting.rs  auf_verification.rs  cli_commands.rs  cli_e2e.rs  cli_list.rs  cli_local_lemmas.rs  cli_ordering.rs  cli_script_check.rs  cli_script_emit.rs  cli_script_prove.rs  cli_splice.rs  cli_stage1.rs  cli_stage10.rs  cli_stage2.rs  cli_stage3.rs  cli_stage4.rs  cli_stage5.rs  cli_stage6.rs  cli_stage7.rs  cli_stage8.rs  cli_stage9.rs  cli_targets.rs  discovery.rs  domain_bitvector_arith.rs  domain_boolean_algebra.rs  domain_group.rs  domain_kleene.rs  domain_list_monoid.rs  domain_memory_safety.rs  domain_quantified_stress.rs  domain_ring.rs  egglog_export.rs  equality_certificates.rs  foundation.rs  library_api.rs  mm0_parsing.rs  proof_search.rs  reference_examples.rs  safe_binders.rs  stage0.rs  (+14 more)
tests/common/: mod.rs
tests/fixtures/: cli_e2e.mm0  cli_local.mm0  cli_multi.mm0  domain_bitvector_arith.mm0  domain_boolean_algebra.mm0  domain_group.mm0  domain_kleene.mm0  domain_list_monoid.mm0  domain_memory_safety.mm0  domain_ring.mm0  stage4_conversion.mm0  stage8_bitvector_arith.mm0  stage8_boolean_algebra.mm0  stage8_list_monoid.mm0  stage8_memory_safety.mm0  stage8_ring.mm0
tests/fixtures/empty/: expected.cert.json  (+1 more)
(+9 files in other folders)
