[package]
name = "eggbau"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"
description = "Untrusted proof-search tooling that emits Aufbau scripts for MM0."

[dependencies]
egglog = { version = "=2.0.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
insta = "1.43"
